@@ -6,6 +6,7 @@ You can use Trac wiki syntax.
 
 == Trunk ==
 
+ * Changed `resizeVertexMap` and `resizeEdgeMap`. The two-parameter versions have similar semantics as before and initialize the map with 0. The three-parameter versions expect an additional "prototype version" that is copied/assigned into the map. The old copy-from-arrayy versions are now called `assignVertexMap` and `assignEdgeMap`. Also updated the tutorial.
  * Adding documentation of graph iterator constructors.
  * Adding full segment support for journaled strings, including segment assignment, e.g. `infix(journaledString, 0, 10) = DnaString("CGAT")`.
  * Adding `position()`, `operator-()`, `operator[]` with proxy functionality and relation operators to journaled string iterator.
